Modified Script Final No Revision

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <article>
           <h2>Seputar Technology</h2>
           <h5>Dibuat oleh Ahmad Subarjah, Oct 09 2024</h5>
-          <div class="fake-img3" style="height: 400px">Image</div>
+          <img src="https://cdn.pixabay.com/photo/2019/01/30/07/45/web-3963945_1280.jpg" class="fake-img3" style="min-height: 100px" />
           <h3><a href="#" class="news1">Teknologi AI Semakin Canggih: Peran Kecerdasan Buatan di Berbagai Industri </a></h3>
           <p>
             Kecerdasan buatan (AI) terus berkembang pesat dan kini digunakan di berbagai sektor seperti kesehatan, pendidikan, hingga bisnis. Teknologi ini tidak hanya membantu mempercepat proses kerja, tetapi juga memberikan solusi
@@ -39,7 +39,7 @@
 
         <article>
           <h5>Dibuat oleh Kurnia Ahmad, Sept 21 2024</h5>
-          <div class="fake-img4" style="height: 400px"></div>
+          <img src="https://cdn.pixabay.com/photo/2018/07/14/11/28/blockchain-3537389_640.jpg" class="fake-img4" style="min-height: 100px" />
           <h3><a href="#" class="news1">5G Resmi Hadir di Indonesia: Apa Saja Manfaatnya untuk Kehidupan Sehari-Hari? </a></h3>
           <p>
             Teknologi jaringan 5G kini telah hadir di beberapa kota besar di Indonesia. Dengan kecepatan internet yang jauh lebih tinggi dibandingkan 4G, 5G membawa berbagai manfaat seperti koneksi yang lebih stabil, pengalaman gaming yang
@@ -49,7 +49,7 @@
 
         <article>
           <h5>Dibuat oleh Ridwan Husaeni, Agust 19 2024</h5>
-          <div class="fake-img5" style="height: 400px"></div>
+          <img src="https://cdn.pixabay.com/photo/2014/02/13/07/28/security-265130_640.jpg" class="fake-img5" style="min-height: 100px" />
           <h3><a href="#" class="news1">Cybersecurity: Ancaman Keamanan Digital dan Cara Melindungi Data Pribadi </a></h3>
           <p>
             Di era digital, keamanan siber menjadi semakin penting, terutama dengan meningkatnya serangan ransomware dan pencurian data. Artikel ini akan membahas ancaman terkini di dunia digital serta memberikan tips dan langkah-langkah
@@ -96,7 +96,7 @@
         <article class="article1">
           <h2>Tutorial Website</h2>
           <h5>Dibuat Oleh Sayyid Ismail, Dec 7 2023</h5>
-          <div class="fake-img2" style="height: 200px"></div>
+          <img src="https://cdn.pixabay.com/photo/2020/04/02/22/05/home-office-4996834_640.jpg" class="fake-img2" style="height: 200px" />
           <h3><a href="#" class="news1">Panduan Praktis Membuat Website dengan Desain Menarik</a></h3>
           <p>
             Dalam artikel ini, Anda akan mempelajari cara membuat website dengan desain yang menarik secara mudah dan praktis. Panduan ini dirancang khusus bagi pemula yang ingin memiliki website dengan tampilan profesional tanpa memerlukan
@@ -106,7 +106,7 @@
         <article class="article2">
           <h2>Tutorial Desain</h2>
           <h5>Dibuat Oleh Rahmat Hidayat, Nov 14 2023</h5>
-          <div class="fake-img1" style="height: 200px">Image</div>
+          <img src="https://cdn.pixabay.com/photo/2024/02/08/02/53/digital-8560051_640.jpg" class="fake-img1" style="height: 200px" />
           <h3><a href="#" class="news1">Desain Website untuk Pemula: Panduan Langkah demi Langkah</a></h3>
           <p>
             Dalam tutorial ini, Anda akan belajar cara mendesain website dari nol, bahkan jika Anda belum memiliki pengalaman sebelumnya. Panduan ini disusun secara sederhana dan terstruktur untuk membantu pemula memahami setiap langkah
